# tsv-converter

./: Cargo.toml  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
crate/: Cargo.toml  hedgehog-run.tsv  tauri.conf.json
crate/icons/: icon.icns
crate/src/: commands.rs  main.rs
src/: hooks.server.ts
src/components/: EditForm.svelte  FileInput.svelte  FileMetadata.svelte
src/lib/: fileUtils.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/stores/: file.ts  options.ts
