[package]
name = "tsv-converter"
version = "0.1.0"
authors = ["Teddy Byron <ted@tedbyron.com>, Laveréna Wienclaw <lwienclaw@tinycircuits.com>"]
edition = "2021"
rust-version = "1.62"
description = "TinyCircuits TinyTV Video Converter"
readme = "../README.md"
repository = "https://github.com/lennevia/tsv-converter"
license-file = "../LICENSE"
publish = false

[build-dependencies]
tauri-build = { version = "1.0.3", features = [] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"

[dependencies]
mime_guess = "2.0.4"
notify = { version = "5.0.0", features = ["serde"] }
serde = { version = "1.0.138", features = ["derive"] }
time = { version = "0.3.11", features = ["serde"] }
percent-encoding = "2.2.0"
base64 = "0.21.0"
tide = "0.16.0"
serde_json = "1.0.95"
web-sys = "0.3.61"
lazy_static = "1.4.0"
globals = "1.0.5"
# math = "0.10.0"
# round = "0.1.0"
# libmath = "0.2.1"
# byte_array = "0.1.0"

[dependencies.tauri]
version = "1.0.3"
features = [
    "window-show",
    "dialog-open",
    "dialog-save",
    "global-shortcut-all",
    "protocol-asset",
    "shell-open",
    "shell-sidecar"
]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
